--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
      <div class="container">
 
-          <audio id="audio1" loop>
-               <source src="resources/audio/soft-rain-ambient-111154.mp3">
+          <audio id="music" loop>
+               <source src="">
           </audio>
           
           <div class="menu">
@@ -43,13 +43,71 @@
           </div>
 
           
-          <div class="musicControls">
+          <div class="musicControls visible">
+               <div class="control-btns">
+                    <div class="previous-btn">
+                         <svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="M220-240v-480h80v480h-80Zm520 0L380-480l360-240v480Zm-80-240Zm0 90v-180l-136 90 136 90Z"/></svg>
+                    </div>
+                    <div class="play-btn">
+                         <svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="M320-200v-560l440 280-440 280Zm80-280Zm0 134 210-134-210-134v268Z"/></svg>
+                    </div>
+                    <div class="skip-btn">
+                         <svg xmlns="http://www.w3.org/2000/svg" height="35" viewBox="0 -960 960 960" width="35"><path d="M660-240v-480h80v480h-80Zm-440 0v-480l360 240-360 240Zm80-240Zm0 90 136-90-136-90v180Z"/></svg>
+                    </div>
+               </div>
+
                <div class="musicVolume">
-                    <p>Music Volume</p>
                     <div class="musicVolume-slider">
                          <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M280-360v-240h160l200-200v640L440-360H280Zm80-80h114l86 86v-252l-86 86H360v80Zm100-40Z"/></svg>
                          <input type="range" name="volume" id="volume"min="0" max="1" step="0.01" value="0.3">
                          <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M560-131v-82q90-26 145-100t55-168q0-94-55-168T560-749v-82q124 28 202 125.5T840-481q0 127-78 224.5T560-131ZM120-360v-240h160l200-200v640L280-360H120Zm440 40v-322q47 22 73.5 66t26.5 96q0 51-26.5 94.5T560-320ZM400-606l-86 86H200v80h114l86 86v-252ZM300-480Z"/></svg>
+                    </div>
+               </div>
+
+               <div class="musicSelect-btns">
+                    <div class="sleepy">
+                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M40-200v-600h80v400h320v-320h320q66 0 113 47t47 113v360h-80v-120H120v120H40Zm240-240q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35Zm240 40h320v-160q0-33-23.5-56.5T760-640H520v240ZM280-520q17 0 28.5-11.5T320-560q0-17-11.5-28.5T280-600q-17 0-28.5 11.5T240-560q0 17 11.5 28.5T280-520Zm0-40Zm240-80v240-240Z"/></svg>
+                         <p class="mlabel">Sleepy</p>
+                    </div>
+                    <div class="jazz">
+                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M200-160v-80h80v-160L40-760h560L360-400v160h80v80H200Zm36-440h168l56-80H180l56 80Zm404 440q-50 0-85-35t-35-85q0-50 35-85t85-35q11 0 21 1.5t19 6.5v-368h200v120H760v360q0 50-35 85t-85 35Z"/></svg>
+                         <p class="mlabel">Jazz</p>
+                    </div>
+                    <div class="chill">
+                         <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M160-120v-80h640v80H160Zm160-160q-66 0-113-47t-47-113v-400h640q33 0 56.5 23.5T880-760v120q0 33-23.5 56.5T800-560h-80v120q0 66-47 113t-113 47H320Zm0-80h240q33 0 56.5-23.5T640-440v-320H240v320q0 33 23.5 56.5T320-360Zm400-280h80v-120h-80v120ZM320-360h-80 400-320Z"/></svg>
+                         <p class="mlabel">Chill</p>
+                    </div>
+               </div>
+
+               <div class="ambientSounds">
+                    <h4>Ambient Sounds</h4>
+                    <div class="softRain">
+                         <audio id="softRainAudio" loop>
+                              <source src="resources/audio/soft-rain-ambient-111154.mp3">
+                         </audio>
+                         <p>Soft Rain</p>
+                         <input type="range" name="softRainVolume" id="softRainVolume"min="0" max="1" step="0.01" value="0">
+                    </div>
+                    <div class="flowingRiver">
+                         <audio id="flowingRiverAudio" loop>
+                              <source src="resources/audio/660265_tom_kaszuba_river-flowing (online-audio-converter.com).mp3">
+                         </audio>
+                         <p>Flowing River</p>
+                         <input type="range" name="flowingRiverVolume" id="flowingRiverVolume"min="0" max="1" step="0.01" value="0">
+                    </div>
+                    <div class="birds">
+                         <audio id="birdsAudio" loop>
+                              <source src="resources/audio/53769_arnaud-coutancier_spring-morning-birds-oiseaux-reveil-printemps-1 (online-audio-converter.com).mp3">
+                         </audio>
+                         <p>Birds</p>
+                         <input type="range" name="birdsVolume" id="birdsVolume"min="0" max="1" step="0.01" value="0">
+                    </div>
+                    <div class="whiteNoise">
+                         <audio id="whiteNoiseAudio" loop>
+                              <source src="resources/audio/y2mate.com - White Noise Black Screen 15 Minutes.mp3">
+                         </audio>
+                         <p>White Noise</p>
+                         <input type="range" name="whiteNoiseVolume" id="whiteNoiseVolume"min="0" max="1" step="0.01" value="0">
                     </div>
                </div>
           </div>
@@ -66,5 +124,6 @@
      <script src="script.js" defer></script>
      <script src="menuClock.js" defer></script>
      <script src="background.js" defer></script>
+     <script src="audio.js" defer></script>
 </body>
 </html>
