--- a/index.html
+++ b/index.html
@@ -109,6 +109,34 @@
                          <p>White Noise</p>
                          <input type="range" name="whiteNoiseVolume" id="whiteNoiseVolume"min="0" max="1" step="0.01" value="0">
                     </div>
+                    <div class="firePlace">
+                         <audio id="firePlaceAudio" loop>
+                              <source src="resources/audio/y2mate.com -  FIREPLACE 10 MINUTES  Relaxing Fire Burning Video  Crackling Fireplace Sounds.mp3">
+                         </audio>
+                         <p>Fireplace</p>
+                         <input type="range" name="firePlaceVolume" id="firePlaceVolume"min="0" max="1" step="0.01" value="0">
+                    </div>
+                    <div class="traffic">
+                         <audio id="trafficAudio" loop>
+                              <source src="resources/audio/474404_klankbeeld_tunnel-traffic-ambience-190610_0020 (online-audio-converter.com).mp3">
+                         </audio>
+                         <p>Traffic</p>
+                         <input type="range" name="trafficVolume" id="trafficVolume"min="0" max="1" step="0.01" value="0">
+                    </div>
+                    <div class="underwater">
+                         <audio id="underwaterAudio" loop>
+                              <source src="resources/audio/y2mate.com - Relax within 5 Minutes with deep under the Sea Sounds Deep Ocean Underwater sleeping sound.mp3">
+                         </audio>
+                         <p>Underwater</p>
+                         <input type="range" name="underwaterVolume" id="underwaterVolume"min="0" max="1" step="0.01" value="0">
+                    </div>
+                    <div class="keyboard">
+                         <audio id="keyboardAudio" loop>
+                              <source src="resources/audio/mechanical-keyboard-typing-treble-version-7055.mp3">
+                         </audio>
+                         <p>Keyboard</p>
+                         <input type="range" name="keyboardVolume" id="keyboardVolume"min="0" max="1" step="0.01" value="0">
+                    </div>
                </div>
           </div>
 
