clock/timer feature

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
 
      </div>
 
-     <script src="script.js" defer></script>
-     <script src="menuClock.js" defer></script>
-     <script src="background.js" defer></script>
-     <script src="audio.js" defer></script>
-     <script src="clock.js" defer></script>
-     <script src="timer.js" defer></script>
+     <script src="javaScript/script.js" defer></script>
+     <script src="javaScript/menuClock.js" defer></script>
+     <script src="javaScript/background.js" defer></script>
+     <script src="javaScript/audio.js" defer></script>
+     <script src="javaScript/clock.js" defer></script>
+     <script src="javaScript/timer.js" defer></script>
 </body>
 </html>
